# graphbench

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
demo/: app.py  graph_viz.py  leaderboard.py  requirements.txt
docs/: architecture.md  benchmark_results.md  index.md  quickstart.md
graphbench/: __init__.py  version.py
graphbench/benchmark/: __init__.py  evaluator.py  hotpotqa_loader.py  llm_judge.py  metrics.py
graphbench/community/: __init__.py  detector.py  summarizer.py
graphbench/gnn/: __init__.py  dataset.py  model.py  subgraph.py  trainer.py
graphbench/ingestion/: __init__.py  embedder.py  faiss_writer.py  neo4j_writer.py  rebel_loader.py  run_pipeline.py  triple_extractor.py
graphbench/pipelines/: __init__.py  base.py  gnnrag_pipeline.py  graphrag_pipeline.py
graphbench/utils/: __init__.py  checkpoint.py  config.py  faiss_client.py  llm_client.py  neo4j_client.py
notebooks/: graphbench_babelscape.ipynb  graphbench_main.ipynb
spaces/: README.md  app.py  graph_viz.py  leaderboard.py  requirements.txt
spaces/experiments/results/: benchmark_results.json
tests/: __init__.py  conftest.py  test_benchmark.py  test_faiss_client.py  test_gnn_model.py  test_ingestion.py  test_metrics.py  test_neo4j_client.py  test_pipelines.py
